--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,26 +1,21 @@
-
-<div     *ngIf="boards?.length" else preloading>
-    <p>dashboard-page works!</p>
-
-    <div class="form-control">
-        <input type="text" placeholder="filter board" [(ngModel)]="searchStr">
+<div class="form-control">
+    <input type="text" placeholder="filter board" [(ngModel)]="searchStr">
+</div>
+<div class="dash">
+    <div class="add-dashboard">
+        <button 
+        class="btn btn-dashboard"
+        (click)="addOption(); modalService.open()">+</button>
     </div>
-    <div class="dashboard">
-        <div class="add-dashboard">
-            <button 
-            class="btn btn-dashboard"
-            (click)="addOption(); modalService.open()">+</button>
-        </div>
-
+    <div class="dashboard"  *ngIf="boards?.length" else preloading>
         <div 
         class="card"
         *ngFor="let board of boards | searchPipe:searchStr"
-
         >
             <div 
             class="card-header" 
             [routerLink]="['/admin','board', board.id]" 
-             >
+            >
                 <h2>{{ board.name }}</h2>   
                 <p>{{ board.description}}</p>
                 <small>{{ board.date | date:'medium'}}</small>
@@ -34,19 +29,17 @@
             <a class="btn-board"
             (click)="remove(board.id)">&#10006;</a>
         </div>
-
-
-        <app-modal-board 
-        title="board"
-        *ngIf="modalService.isVisiBle$ | async"
-        [ngSwitch]="action">
-            <app-create-board 
-            *ngSwitchCase="'create'"
-
-            ></app-create-board>
-            <app-edit-board *ngSwitchCase="'edit'"></app-edit-board>
-        </app-modal-board>
     </div>
+    <app-modal-board 
+    title="board"
+    *ngIf="modalService.isVisiBle$ | async"
+    [ngSwitch]="action">
+        <app-create-board 
+        *ngSwitchCase="'create'"
+
+        ></app-create-board>
+        <app-edit-board *ngSwitchCase="'edit'"></app-edit-board>
+    </app-modal-board>
 </div>
 
 <ng-template #preloading >
