--- a/src/app/admin/shared/components/alert/alert.component.html
+++ b/src/app/admin/shared/components/alert/alert.component.html
@@ -1,4 +1,3 @@
-<p>alert works!</p>
 <div class="alert-wrap" *ngIf="text">
     <div class="alert-message"
     [ngClass]="{
@@ -6,7 +5,6 @@
         'alert-warning':type === 'warning',
         'alert-danger':type === 'danger'
     }"
-    >
-        <p>{{ text }}</p>
+    >        <p>{{ text }}</p>
     </div>
 </div>
