--- a/src/app/admin/create-board/create-board.component.html
+++ b/src/app/admin/create-board/create-board.component.html
@@ -6,7 +6,7 @@
         id="title" 
         type="text" 
         formControlName="title" 
-        placeholder="board name"
+        placeholder="board title"
         >
     </div>
 
