--- a/src/app/shared/components/board-item/board-item.component.html
+++ b/src/app/shared/components/board-item/board-item.component.html
@@ -3,7 +3,7 @@
     class="card-header"
     [routerLink]="['/admin','board', board.id]" 
     >
-      <h2>{{ board.name }}</h2>   
+      <h2>{{ board.title }}</h2>   
       <p>{{ board.description}}</p>
       <small>{{ board.date | date:'medium'}}</small>
      </div>
