--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -1,16 +1,15 @@
-<p>edit-board works!</p>
 
 <!-- *ngIf="form" else loading -->
 <div>
     <form [formGroup]="form" (ngSubmit)="submit()">
-    <div class="form-control">
-        <label for="title"></label>
+    <div class="form-control" [ngClass]="{invalid: form.get('title')?.touched && form.get('title')?.invalid}">
+        <label for="title">Title</label>
         <input 
         id="title" 
         type="text" 
         formControlName="title" 
         placeholder="board name"
-        > {{ boardItem.name}}
+        > {{ board.title}}
     </div>
 
     <small
@@ -21,14 +20,14 @@
     . Now  {{form.get('title')?.errors?.minlength.actualLength}}
     </small>
 
-    <div class="form-control">
-        <label for="description"></label>
+    <div class="form-control" [ngClass]="{invalid: form.get('description')?.touched && form.get('description')?.invalid}">
+        <label for="description">Description</label>
         <input 
         id="description" 
         type="text" 
         formControlName="description" 
         placeholder="description"
-        > {{ boardItem.description}}
+        > {{ board.description}}
     </div>
 
     <small
@@ -41,7 +40,7 @@
 
     <button
     type="submit"
-    class="btn modal-btn"
+    class="btn edit-btn"
     [disabled]="form.invalid || submitted"
     >Save changes</button>
 </form>
