--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -4,12 +4,7 @@
     <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-control" [ngClass]="{invalid: form.get('title')?.touched && form.get('title')?.invalid}">
         <label for="title">Title</label>
-        <input 
-        id="title" 
-        type="text" 
-        formControlName="title" 
-        placeholder="board name"
-        >
+        <input  id="title"  type="text" formControlName="title" placeholder="board name">
     </div>
 
     <small
