--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -4,18 +4,26 @@
     <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-control">
         <label for="title">Title</label>
-        <input  id="title"  type="text" formControlName="title" placeholder="board name">
+        <input  id="title"  type="text" class="form-control" formControlName="title" required>
+
+        <!-- <div
+        class="alert"
+        *ngIf="title.invalid && (title.dirty || title.touched)"
+        >  
+            <div *ngIf="title.errors?.['required']">
+                Title is required.
+            </div>
+            <div *ngIf="title.errors?.['minlength']">
+                Name must be at least 4 characters long.
+            </div>
+            <div *ngIf="title.errors?.['forbiddenName']">
+                Name cannot be Bob.
+            </div>
+        </div> -->
+
     </div>
 
-    <small
-    class="alert"
-    *ngIf="form.get('title')?.errors?.minlength && form.get('title')?.touched"
-    >   Please fill title field width min length
-    {{form.get('title')?.errors?.minlength.requiredLength}}
-    . Now  {{form.get('title')?.errors?.minlength.actualLength}}
-    </small>
-
-    <div class="form-control" [ngClass]="{invalid: form.get('description')?.touched && form.get('description')?.invalid}">
+    <div class="form-control">
         <label for="description">Description</label>
         <input 
         id="description" 
@@ -25,18 +33,17 @@
         >
     </div>
 
-    <small
+    <!-- <small
     class="alert"
     *ngIf="form.get('description')?.errors?.minlength && form.get('description')?.touched"
     >   Please fill description field width min length
     {{form.get('description')?.errors?.minlength.requiredLength}}
     . Now  {{form.get('description')?.errors?.minlength.actualLength}}
-    </small>
+    </small> -->
 
     <button
     type="submit"
     class="btn edit-btn"
-    [disabled]="form.invalid || submitted"
     >Save changes</button>
 </form>
 </div>
