--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -1,6 +1,6 @@
 
 <!-- *ngIf="form" else loading -->
-<div>
+<div class="form-container">
     <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-control">
         <label for="title">Title</label>
