task seach pipe

--- a/src/app/admin/shared/components/board-item/board-item.component.html
+++ b/src/app/admin/shared/components/board-item/board-item.component.html
@@ -5,7 +5,7 @@
    >
      <h2>{{ board.title }}</h2>   
      <p>{{ board.description}}</p>
-     <small>{{ board.date | date:'medium'}}</small>
+     <small>{{ board.date | date:'fullDate'}}</small>
     </div>
     <div>
        <small> {{ board.author}} </small>
