--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -6,9 +6,8 @@
                 <a routerLinkActive="active"  routerLink="/">Home</a>
             </li>
             <li>
-                <a routerLinkActive="active"  href="/board/12">Link</a>
+                <a class="btn" routerLinkActive="active" [routerLink]="['/admin','dashboard']">Home-Admin</a>
             </li>
-            <li><a href="#">Link</a></li>
         </ul>
     </nav>
 </header>
