--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,29 +1,36 @@
 
 .info-wrapper{
     display: flex;
-
     flex-direction: column;
-    width: 20rem;
-    height: 20rem;
-    background-color: #ebf1fa;
-    color: #8c9094;
-    border-radius: 1rem;
-    justify-content: space-between;
-    padding: 1rem;
-    border-color: #fff;
-    // box-shadow: 0 0 10px rgb(0 0 0 / 50%);
-    box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey;
-    &:hover{
-        background-color: #c4d7dc;
-        transition: background-color 0.5s ease;
-        transform: scale(1.05);
-        transition: transform 0.5s ease;
-    }
-    &:active{
-        background-color: #c49bfa;
-        transition: background-color 0.5s ease;
+          // width: 20rem;
+          padding: 4rem;
+        height: 10%rem;
+        gap: 5rem;
+
+
+    .info{
+  
+        background-color: #ebf1fa;
+        color: #8c9094;
+        border-radius: 1rem;
+        justify-content: space-between;
+        padding: 1rem;
+        border-color: #fff;
+        // box-shadow: 0 0 10px rgb(0 0 0 / 50%);
+        box-shadow: -9px -8px 23px 0px white, 8px 1px 10px 0px grey;
+        &:hover{
+            background-color: #c4d7dc;
+            transition: background-color 0.5s ease;
+            transform: scale(1.05);
+            transition: transform 0.5s ease;
+        }
+        &:active{
+            background-color: #c49bfa;
+            transition: background-color 0.5s ease;
+        }
     }
 }
+
 
 
 .dashboard{
