--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -1,26 +1,25 @@
 
-<!-- *ngIf="form" else loading -->
-<div class="form-container">
+
+<div class="form-container" *ngIf="form" else loading>
     <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-control">
         <label for="title">Title</label>
         <input  id="title"  type="text" class="form-control" formControlName="title" required>
 
-        <!-- <div
+        <div
         class="alert"
-        *ngIf="title.invalid && (title.dirty || title.touched)"
+        *ngIf="form.get('title')?.invalid && (form.get('title')?.dirty || form.get('title')?.touched)"
         >  
-            <div *ngIf="title.errors?.['required']">
+            <div *ngIf="form.get('title')?.errors?.['required']">
                 Title is required.
             </div>
-            <div *ngIf="title.errors?.['minlength']">
+            <div *ngIf="form.get('title')?.errors?.['minlength']">
                 Name must be at least 4 characters long.
             </div>
-            <div *ngIf="title.errors?.['forbiddenName']">
+            <div *ngIf="form.get('title')?.errors?.['forbiddenName']">
                 Name cannot be Bob.
             </div>
-        </div> -->
-
+        </div>
     </div>
 
     <div class="form-control">
@@ -33,17 +32,10 @@
         >
     </div>
 
-    <!-- <small
-    class="alert"
-    *ngIf="form.get('description')?.errors?.minlength && form.get('description')?.touched"
-    >   Please fill description field width min length
-    {{form.get('description')?.errors?.minlength.requiredLength}}
-    . Now  {{form.get('description')?.errors?.minlength.actualLength}}
-    </small> -->
-
     <button
     type="submit"
     class="btn edit-btn"
+    [disabled]="form.invalid || submitted"
     >Save changes</button>
 </form>
 </div>
