added task to dashboard done

--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -21,9 +21,9 @@
             class="add-task-btn btn"
             (click)="modalService.open()"
             >+</button>
-            <div *ngIf="tasks?.length">
+            <div *ngIf="taskService.tasks">
                 <div class="task"
-                *ngFor="let task of tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'todo'"  >
+                *ngFor="let task of taskService.tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'todo'"  >
                     <h3 class="task-title">{{ task.name }}</h3>  
                     <div class="task-btns">
                         <button class="edit-btn btn">&#9998;</button>
@@ -41,9 +41,9 @@
             class="add-task-btn btn"
             (click)="modalService.open()"
             >+</button>
-            <div *ngIf="tasks?.length">
+            <div *ngIf="taskService.tasks">
                 <div class="task"
-                *ngFor="let task of tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'in progress'">
+                *ngFor="let task of taskService.tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'in progress'">
                     <h3 class="task-title">{{ task.name }}</h3>  
                     <div class="task-btns">
                         <button class="edit-btn btn">&#9998;</button>
@@ -61,9 +61,9 @@
             class="add-task-btn btn"
             (click)="modalService.open()"
             >+</button>
-            <div *ngIf="tasks?.length">
+            <div *ngIf="taskService.tasks">
                 <div class="task"
-                *ngFor="let task of tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'done' ">
+                *ngFor="let task of taskService.tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'done' ">
                     <h3 class="task-title">{{ task.name }}</h3>  
                     <div class="task-btns">
                         <button class="edit-btn btn">&#9998;</button>
