board page pre-loader

--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -13,7 +13,8 @@
             </div>
         </div>
     </div>
-<div class="board-container">
+    <div *ngIf="loading" class="loader"></div>
+<div class="board-container" *ngIf="!loading" >
     <div class="board-item">
         <h3 class="block-title">todo</h3>
         <div class="block">
@@ -21,7 +22,7 @@
             class="add-task-btn btn"
             (click)="modalService.open()"
             >+</button>
-            <div class="tasks-wrarper" *ngIf="taskService.tasks">
+            <div class="tasks-wrapper" *ngIf="taskService.tasks">
                 <div class="task"
                 *ngFor="let task of taskService.tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'todo'"  >
                     <h3 class="task-title">{{ task.name }}</h3>  
@@ -41,7 +42,7 @@
             class="add-task-btn btn"
             (click)="modalService.open()"
             >+</button>
-            <div class="tasks-wrarper" *ngIf="taskService.tasks">
+            <div class="tasks-wrapper" *ngIf="taskService.tasks">
                 <div class="task"
                 *ngFor="let task of taskService.tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'in progress'">
                     <h3 class="task-title">{{ task.name }}</h3>  
@@ -61,7 +62,7 @@
             class="add-task-btn btn"
             (click)="modalService.open()"
             >+</button>
-            <div class="tasks-wrarper" *ngIf="taskService.tasks">
+            <div class="tasks-wrapper" *ngIf="taskService.tasks">
                 <div class="task"
                 *ngFor="let task of taskService.tasks | sortBy:sortByValue| searchTaskPipe:searchStr | statusPipe:'done' ">
                     <h3 class="task-title">{{ task.name }}</h3>  
