--- a/src/app/admin/board-page/board-page.component.scss
+++ b/src/app/admin/board-page/board-page.component.scss
@@ -84,7 +84,7 @@
                     transition: background 0.5s ease;
                 }
             }
-            .tasks-wrarper{
+            .tasks-wrapper{
                 display: flex;
                 flex-direction: column;
                 gap: 13px;
