--- a/src/app/admin/board-page/board-page.component.html
+++ b/src/app/admin/board-page/board-page.component.html
@@ -16,11 +16,11 @@
     <div *ngIf="loading" class="loader"></div>
 <div class="board-container" *ngIf="!loading" >
     <div class="board-item">
-        <h3 class="block-title">todo</h3>
+        <h3 class="block-title">{{statuses[0]}}</h3>
         <div class="block">
             <button 
             class="add-task-btn btn"
-            (click)="modalService.open()"
+            (click)="modalService.open(); getStatus(0)"
             >+</button>
             <div class="tasks-wrapper" *ngIf="taskService.tasks">
                 <div class="task"
@@ -36,15 +36,22 @@
         </div>
     </div>
     <div class="board-item">
-        <h3 class="block-title">in progress</h3>
+        <h3 class="block-title">{{statuses[1]}}</h3>
         <div class="block">
             <button 
             class="add-task-btn btn"
-            (click)="modalService.open()"
+            (click)="modalService.open(); getStatus(1)"
             >+</button>
-            <div class="tasks-wrapper" *ngIf="taskService.tasks">
+            <div class="tasks-wrapper" *ngIf="taskService.tasks" 
+            (drop)="drop($event)" 
+            (dragover)="allowDrop($event)"
+            >
                 <div class="task"
-                *ngFor="let task of taskService.tasks | statusPipe:statuses[1]| searchTaskPipe:searchStr | sortBy:sortByValue ">
+                *ngFor="let task of taskService.tasks | statusPipe:statuses[1]| searchTaskPipe:searchStr | sortBy:sortByValue"
+                draggable="true" 
+                (dragstart)="drag($event)" 
+                id="drag1"
+                >
                     <h3 class="task-title">{{ task.name }}</h3>  
                     <div class="task-btns">
                         <button class="edit-btn btn">&#9998;</button>
@@ -56,18 +63,25 @@
         </div>
     </div>
     <div class="board-item">
-        <h3 class="block-title">done</h3>
+        <h3 class="block-title">{{statuses[2]}}</h3>
         <div class="block">
             <button 
             class="add-task-btn btn"
-            (click)="modalService.open()"
+            (click)="modalService.open(); getStatus(2)"
             >+</button>
-            <div class="tasks-wrapper" *ngIf="taskService.tasks">
+            <div class="tasks-wrapper" *ngIf="taskService.tasks"
+            (drop)="drop($event)" 
+            (dragover)="allowDrop($event)"
+            >
                 <div class="task"
-                *ngFor="let task of taskService.tasks |  statusPipe:statuses[2] | searchTaskPipe:searchStr |  sortBy:sortByValue">
+                *ngFor="let task of taskService.tasks |  statusPipe:statuses[2] | searchTaskPipe:searchStr |  sortBy:sortByValue"
+                draggable="true" 
+                (dragstart)="drag($event)" 
+                id="drag1"
+                >
                     <h3 class="task-title">{{ task.name }}</h3>  
                     <div class="task-btns">
-                        <button class="edit-btn btn">&#9998;</button>
+                        <button class="edit-btn btn" >&#9998;</button>
                         <a class="btn-board" (click)="remove(task.id)">&#10006;</a>
                         <button class="archive-btn btn">&#9972;</button>
                     </div> 
@@ -91,12 +105,6 @@
             *ngIf="name.invalid && name.touched"
             >Please fill title field width min length. Now {{ name.value.length }}
         </small>
-        <div class="form-group">
-            <select name="select" ngModel #select = "ngModel" required="required">
-            <option *ngFor="let status of statuses">{{ status }} </option>
-            </select>
-        </div>
-        <!-- [disabled]="name.invalid || select.invalid" -->
         <button
         type="submit"
         class="btn modal-btn"
