--- a/src/app/admin/create-board/create-board.component.html
+++ b/src/app/admin/create-board/create-board.component.html
@@ -6,7 +6,8 @@
         id="title" 
         type="text" 
         formControlName="title" 
-        placeholder="board title"
+        placeholder="enter board title"
+        appFocus
         >
     </div>
 
@@ -24,7 +25,7 @@
         id="description" 
         type="text" 
         formControlName="description" 
-        placeholder="description"
+        placeholder="fill description"
         >
     </div>
 
