--- a/src/app/admin/edit-board/edit-board.component.html
+++ b/src/app/admin/edit-board/edit-board.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="form" (ngSubmit)="submit()">
     <div class="form-control">
         <label for="title">Title</label>
-        <input  id="title"  type="text" class="form-control" formControlName="title" required>
+        <input  id="title"  type="text" class="form-control" formControlName="title" required appFocus>
 
         <div
         class="alert"
